# RemoteLab

./: .gitignore  CONTRIBUTING.md  MEMORY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: gen_icon.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  lib.rs  main.rs  tray.rs
src-tauri/src/capture/: kms.rs  mod.rs  nvfbcs.rs  tests.rs  x11.rs
src-tauri/src/commands/: crypto.rs  desktop.rs  devices.rs  files.rs  mod.rs  ssh.rs  sshkeys.rs  vpn.rs
src-tauri/src/desktop/: detect.rs  launcher.rs  mod.rs  sunshine.rs  turbovnc.rs  vnc_proxy.rs
src-tauri/src/encoder/: amf.rs  mod.rs  nvenc_lowlatency.rs  software.rs  tests.rs  vaapi.rs
src-tauri/src/filetransfer/: ops.rs
src-tauri/src/input/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/quality/: adaptive_controller.rs  bandwidth_estimator.rs  mod.rs  monitor.rs  tests.rs
src-tauri/src/sshkeys/: ops.rs
src-tauri/src/terminal/: mod.rs  pty.rs
src-tauri/src/transport/: mod.rs  protocol.rs  quic.rs  sshtunnel.rs  tests.rs  webtransport.rs
src-tauri/src/vpn/: mod.rs  tunnel.rs  wg_config.rs
src/components/: Dashboard.tsx  DeviceCard.tsx  FileManager.tsx  PasswordPrompt.tsx  RemoteDesktop.tsx  Settings.tsx  SshKeyManager.tsx  Terminal.tsx  VpnToggle.tsx
src/components/streaming/: InputPredictor.ts  VideoPlayer.tsx  WebCodecsDecoder.ts  WebGLRenderer.ts  index.ts  protocol.ts
src/components/streaming/hooks/: useStreaming.ts
src/contexts/: ThemeContext.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/services/: api.ts  types.ts
src/styles/: globals.css
