[package]
name = "remotelab"
version = "0.1.0"
description = "RemoteLab - Unified Remote Access Client"
authors = ["ucas-liumk"]
license = "MIT"
repository = "https://github.com/ucas-liumk/RemoteLab"
edition = "2021"

[lib]
name = "remotelab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for session IDs
uuid = { version = "1", features = ["v4"] }

# Directories for config persistence
dirs = "5"

# Real PTY for SSH terminal
portable-pty = "0.8"

# WebSocket proxy for VNC
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Base64 encoding for terminal data
base64 = "0.22"

# Config file encryption (AES-256-GCM)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Screen capture dependencies
cuda-driver-sys = { version = "0.3", optional = true }
drm-sys = { version = "0.2", optional = true }
libc = "0.2"
thiserror = "1"

# Platform detection
sysinfo = "0.30"

# QUIC/WebTransport transport layer
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
bytes = "1"
async-trait = "0.1"
wtransport = { version = "0.5", optional = true }
rcgen = "0.13"

[features]
default = []
cuda-driver-sys = ["dep:cuda-driver-sys"]
drm-sys = ["dep:drm-sys"]
wtransport = ["dep:wtransport"]
russh = []
